--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.sonatype.mavenbook.simpleweb</groupId>
+  <groupId>com.srnademo</groupId>
   <artifactId>simple-webapp</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
 
   <name>simple-webapp</name>
-  <url>http://maven.apache.org</url>
+  <url>http://www.serena.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,4 +21,24 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <distributionManagement>
+    <repository>
+        <id>deployment</id>
+        <name>Internal Releases</name>
+        <url>http://localhost:8081/nexus/content/repositories/releases/</url>
+    </repository>
+    <snapshotRepository>
+        <id>deployment</id>
+        <name>Internal Releases</name>
+        <url>http://localhost:8081/nexus/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
+
+  <scm>
+    <connection>scm:git:git@github.com:akevinlee/simple-webapp.git</connection>
+    <url>scm:git:git@github.com:akevinlee/simple-webapp.git</url>
+    <developerConnection>scm:git:git@github.com:akevinlee/simple-webapp.git</developerConnection>
+    <tag>simple-webapp-1.0</tag>
+  </scm>
 </project>
