--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 
     <groupId>com.srnademo</groupId>
     <artifactId>simple-webapp</artifactId>
-    <version>1.2-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -26,6 +26,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
         <!-- tag::actuator[] -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -41,6 +50,7 @@
     </dependencies>
 
     <build>
+        <finalName>simple-webapp</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -70,6 +80,6 @@
         <connection>scm:git:git@github.com:akevinlee/simple-webapp.git</connection>
         <url>scm:git:git@github.com:akevinlee/simple-webapp.git</url>
         <developerConnection>scm:git:git@github.com:akevinlee/simple-webapp.git</developerConnection>
-        <tag>simple-webapp-1.1</tag>
+        <tag>simple-webapp-1.0</tag>
     </scm>
 </project>
